maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: not found: value getDIrection
    while (keepHandOnSideWall() && !estFaceMur() && getDIrection()!=Direction.NORD) {
                                                    ^